--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "json-schema-changelog": "^0.1.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-json-view": "^1.21.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/styled-components": "^5.1.9",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.1.2",
-    "vite": "^2.3.3"
+    "vite": "^2.3.3",
+    "vite-plugin-svgr": "^0.2.0"
   }
 }
