--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prettier": "prettier --write ."
   },
   "resolutions": {
     "styled-components": "^5"
@@ -23,6 +24,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "prettier": "2.3.2",
     "typescript": "^4.1.2",
     "vite": "^2.3.3",
     "vite-plugin-svgr": "^0.3.0"
